--- a/runtime/pangolin-parachain/Cargo.toml
+++ b/runtime/pangolin-parachain/Cargo.toml
@@ -28,6 +28,9 @@ pallet-collator-selection       = { default-features = false, git = "https://git
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
 # darwinia
 darwinia-collator-primitives = { default-features = false, path = "../../primitives" }
+# darwinia-bridges-substrate
+bp-pangolin           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.16" }
+pallet-bridge-grandpa = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.16" }
 # polkadot
 pallet-xcm         = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
@@ -68,8 +71,10 @@ substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", bran
 [features]
 default = ["std"]
 std = [
+	# crates.io
 	"codec/std",
 	"scale-info/std",
+	# cumulus
 	"cumulus-pallet-aura-ext/std",
 	"cumulus-pallet-dmp-queue/std",
 	"cumulus-pallet-parachain-system/std",
@@ -80,12 +85,18 @@ std = [
 	"cumulus-primitives-utility/std",
 	"pallet-collator-selection/std",
 	"parachain-info/std",
+	# darwinia
 	"darwinia-collator-primitives/std",
+	# darwinia-bridges-substrate
+	"bp-pangolin/std",
+	"pallet-bridge-grandpa/std",
+	# polkadot
 	"pallet-xcm/std",
 	"polkadot-parachain/std",
 	"xcm/std",
 	"xcm-builder/std",
 	"xcm-executor/std",
+	# substrate
 	"frame-executive/std",
 	"frame-support/std",
 	"frame-system/std",
