--- a/runtime/pangolin-parachain/Cargo.toml
+++ b/runtime/pangolin-parachain/Cargo.toml
@@ -27,7 +27,8 @@ cumulus-primitives-utility      = { default-features = false, git = "https://git
 pallet-collator-selection       = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
 # darwinia
-dc-primitives = { default-features = false, path = "../../primitives" }
+dc-common-runtime = { default-features = false, path = "../common" }
+dc-primitives     = { default-features = false, path = "../../primitives" }
 # darwinia-bridges-substrate
 bp-message-dispatch               = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.16" }
 bp-messages                       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.16" }
@@ -96,6 +97,7 @@ std = [
 	"pallet-collator-selection/std",
 	"parachain-info/std",
 	# darwinia
+	"dc-common-runtime/std",
 	"dc-primitives/std",
 	# darwinia-bridges-substrate
 	"bp-pangolin/std",
