--- a/runtime/pangolin-parachain/Cargo.toml
+++ b/runtime/pangolin-parachain/Cargo.toml
@@ -43,13 +43,13 @@ pallet-bridge-grandpa  = { default-features = false, git = "https://github.com/d
 pallet-bridge-messages = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.18" }
 pallet-fee-market      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.18" }
 # polkadot
-pallet-xcm                 = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
-pallet-xcm-benchmarks      = { optional = true, default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
-polkadot-parachain         = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
-polkadot-runtime-common    = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
-xcm                        = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
-xcm-builder                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
-xcm-executor               = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
+pallet-xcm              = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
+pallet-xcm-benchmarks   = { optional = true, default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
+polkadot-parachain      = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
+polkadot-runtime-common = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
+xcm                     = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
+xcm-builder             = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
+xcm-executor            = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
 # substrate
 frame-benchmarking                         = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
 frame-executive                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
@@ -119,6 +119,7 @@ std = [
 	# polkadot
 	"pallet-xcm/std",
 	"polkadot-parachain/std",
+	"polkadot-runtime-common/std",
 	"xcm/std",
 	"xcm-builder/std",
 	"xcm-executor/std",
