--- a/runtime/pangolin-parachain/Cargo.toml
+++ b/runtime/pangolin-parachain/Cargo.toml
@@ -12,7 +12,7 @@ version     = "5.2.1"
 
 [dependencies]
 # crates.io
-array-bytes = { version = "1.5", optional = true }
+array-bytes = { version = "1.5" }
 codec       = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
 scale-info  = { version = "2.1", default-features = false, features = ["derive"] }
 smallvec    = { version = "1.8" }
@@ -28,8 +28,8 @@ cumulus-primitives-utility      = { default-features = false, git = "https://git
 pallet-collator-selection       = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
 # darwinia
-dc-common-runtime = { default-features = false, path = "../common" }
 dc-primitives     = { default-features = false, path = "../../primitives" }
+dp-common-runtime = { default-features = false, path = "../common" }
 # darwinia-messages-substrate
 bp-message-dispatch    = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.20" }
 bp-messages            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.20" }
@@ -102,7 +102,7 @@ std = [
 	"pallet-collator-selection/std",
 	"parachain-info/std",
 	# darwinia
-	"dc-common-runtime/std",
+	"dp-common-runtime/std",
 	"dc-primitives/std",
 	# darwinia-messages-substrate
 	"bp-pangolin/std",
@@ -155,8 +155,6 @@ std = [
 alpha = []
 
 runtime-benchmarks = [
-	# crates.io
-	"array-bytes",
 	# cumulus
 	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
 	# darwinia-messages-substrate
